Add Pruebas and add Diseño

--- a/Diseño/Latex/main.tex
+++ b/Diseño/Latex/main.tex
@@ -16,7 +16,7 @@
             
         \vspace{0.5cm}
         \LARGE
-        Los primeros pasos
+        Diseño
             
         \vspace{1.5cm}
             
